# Multisource-Rag

./: .env.example  .gitignore  LICENSE  README.md  SAMPLE_QUESTIONS.md  pyproject.toml  pytest.ini  requirements.txt  sources.yaml  streamlit_app.py
.claude/: settings.local.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ChatMessage.tsx  ChatPanel.tsx  QueryTypePill.tsx  Sidebar.tsx  SourceBadge.tsx  SourceCitations.tsx  ThinkingIndicator.tsx
frontend/src/types/: index.ts
scripts/: generate_invoice_pdf.py  generate_sample_pdf.py  seed_mysql.py  seed_postgres.py  setup_db_examples.sql
src/: __init__.py  config.py  errors.py  logging_config.py  main.py
src/agents/: __init__.py  orchestrator.py  result_merger.py  unstructured_retriever.py
src/data_sources/: __init__.py  azure_blob_connector.py  azure_sql_connector.py  base.py  bigquery_connector.py  cosmos_connector.py  gcs_connector.py  local_file_connector.py  mysql_connector.py  postgres_connector.py  registry.py
src/document_processing/: __init__.py  chunker.py  embedder.py  ingestion.py  parsers.py  vector_store.py
src/mcp_server/: __init__.py  handlers.py  server.py  sql_safety.py  tools.py
src/models/: __init__.py  schemas.py
tests/: conftest.py  test_config.py  test_connectors.py  test_document_processing.py  test_handlers.py  test_ingestion_concurrency.py  test_orchestrator.py  test_orchestrator_timeout.py  test_path_traversal.py  test_registry.py  test_sql_safety.py
